[gd_scene load_steps=12 format=3 uid="uid://dttliofjqs7do"]

[ext_resource type="Script" path="res://scripts/Idle_ArrowUp.gd" id="1_3t7um"]
[ext_resource type="Texture2D" uid="uid://btmv3exm52rd6" path="res://Assets/arrow_up_idle.png" id="1_j5f8w"]
[ext_resource type="Texture2D" uid="uid://bc4ukci75jigr" path="res://Assets/arrow_up_good.png" id="2_770j7"]
[ext_resource type="Texture2D" uid="uid://iyn42iqesuhs" path="res://Assets/arrow_up_bad.png" id="3_akr6q"]
[ext_resource type="AudioStream" uid="uid://cmm3gdjehihp6" path="res://Assets/Audio/sfx/retro-blip-236676.mp3" id="5_p65m6"]
[ext_resource type="AudioStream" uid="uid://cmmhct2qcfy2d" path="res://Assets/Audio/sfx/retro-explode-1-236678.mp3" id="6_qx2sx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jqdls"]
size = Vector2(36, 48)

[sub_resource type="Animation" id="Animation_o78ow"]
resource_name = "Bad"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite_Bad:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xjvlm"]
resource_name = "Good"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite_Good:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_gxaxe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite_Good:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite_Bad:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2rkq0"]
_data = {
"Bad": SubResource("Animation_o78ow"),
"Good": SubResource("Animation_xjvlm"),
"RESET": SubResource("Animation_gxaxe")
}

[node name="Idle_ArrowUp" type="Area2D"]
script = ExtResource("1_3t7um")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jqdls")

[node name="Sprite_Idle" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("1_j5f8w")

[node name="Sprite_Good" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("2_770j7")

[node name="Sprite_Bad" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("3_akr6q")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2rkq0")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_p65m6")
bus = &"SFX"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_qx2sx")

[connection signal="area_shape_entered" from="." to="." method="_on_Idle_ArrowUp_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_Idle_ArrowUp_area_shape_exited"]
